[package]
name = "koenokatachibot"
version = "0.1.0"
edition = "2021"
authors = ["Jared Allard <jared@rgst.io>"]
description = "A bot to post media on Mastodon at a set interval from a movie/tv show"
repository = "https://github.com/jaredallard/koenokatachibot"
license = "GPL-3.0"

[dependencies]
megalodon = "0.3.0"
serde = { version = "1.0.149", features = ["derive"] }
serde_json = "1.0.89"
tokio = { version = "1.23.0", features = ["macros", "rt-multi-thread"] }
tokio-cron-scheduler = { version = "0.8.1", features = ["signal"] }
uuid = "1.2.2"
